tests/backend/zero_alloc_checker/fail6.ml
exception Exn of int
let[@zero_alloc] test3 n =
  try raise (Exn n) with Exn n -> n
